--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@ body {
 }
 
 header {
-  font-size: 1.5rem;
+  font-size: 2rem;
 }
 
 header,
@@ -25,15 +25,81 @@ form {
 
 form input,
 form button {
-  padding: 0.5rem;
-  padding-left: 1rem;
+  padding: 1rem;
   font-size: 1.8rem;
   border: none;
-  background: white;
+  background: #102820;
   border-radius: 2rem;
 }
 
 form button {
-  color: blue;
-  background: white;
+  color: #fcfffe;
+  background: #102820;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  margin-left: 1rem;
+}
+
+.fa-plus-circle {
+  margin-top: 0.3rem;
+  margin-left: -8px;
+}
+
+.todo-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.todo-list {
+  min-width: 30%;
+  list-style: none;
+}
+
+.todo {
+  margin: 0.5rem;
+  padding-left: 0.5rem;
+  background: #caba9c;
+  color: black;
+  font-size: 1.5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  transition: 0.5s;
+  border-radius: 2rem;
+}
+
+.todo-input {
+  color: #caba9c;
+  font-family: "Times New Roman", Times, serif;
+}
+
+.todo li {
+  flex: 1;
+}
+
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  outline: none;
+  border: none;
+}
+
+.select {
+  margin: 1rem;
+  position: relative;
+  overflow: hidden;
+  border-radius: 50px;
+}
+
+select {
+  color: #caba9c;
+  background: #102820;
+  font-size: 1rem;
+  font-family: "Times New Roman", Times, serif;
+  width: 10rem;
+  height: 3.2rem;
+  cursor: pointer;
+  padding: 1rem;
 }
